# cse123

./: .gitignore  .gitmodules  Demo Materials  README.md  pyproject.toml
424_overdrive_eq/: 424_overdrive_eq.kicad_prl  424_overdrive_eq.kicad_pro  424_overdrive_eq.kicad_sch
Benchmarking/: Makefile  README.md  daisy_benchmark.cpp  effects.h  matmul_benchmarking.md  matrix.h
Demo_Materials/: Script.md
Documentation/: design_document.tex  design_objectives.md  goal_statement.md  latency.md  need_statement.md  personas.md
JUCE - In Development/: demo3.jucer
JUCE - In Development/Source/: PluginEditor.cpp  (+2 more)
LUT - In Development/: chord_lut_build.py  chord_match.py  lut.json  lut_build.py  lut_match.py  wav_to_lut.py
LUT Development/: README.md  lut.json  wav_to_lut.py
NET - In Development/: Visualizer.py  build_guitar_dataset.py  debug_val_batch_torch.py  detected.mid  events.json  events_frames.json  export_model.py  export_onset_header.py  guitarset.py  guitarset_make_dataset.py  idmt_guitar.py  inspect_transients.py  model.json  nn_fft_refine.py  note_crnn.pt  note_crnn_attack.pt  note_events.csv  out.mid  resample.py  test.py  test_infer_npz.py  train_guitar_poly.py  train_guitar_poly_trans.py  train_twohead_guitar.py
TIMBRE NET - In Developent/: README.md  dataset.py  losses.py  model.py  realtime.py  requirements.txt  stream_infer.py  test.py  train.py  train_live_timbre_model.py  train_piano_resynth.py
special_effects/: README.md
wamp_overdrive/: wamp_overdrive.kicad_pcb  wamp_overdrive.kicad_prl  wamp_overdrive.kicad_pro  wamp_overdrive.kicad_sch
(+409 files in other folders)
