[project]
name = "cse123"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.12"
dependencies = [
    "librosa>=0.11.0",
    "litert-torch>=0.8.0",
    "numpy>=2.4.2",
    "soundfile>=0.13.1",
    "tensorflow>=2.21.0",
    "torch>=2.9.1",
]
